--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h1>Привет</h1>
-<button>JJJJ</button>
+<header>
+            <div class="header1">
+                <div class="header2"><a href="">Home</a></div>
+                <div class="header2"><a href="">About</a></div>
+                <div class="header2"><a href="">Contacts</a></div>
+                <div class="header2"><a href="">Docs</a></div>
+            </div>
+        </header>
