--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<header>
+<!DOCTYPE html>
+<html>
+<head>
+	 <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>KRKRK</title>
+</head>
+
+<body>
+
+	<header>
             <div class="header1">
                 <div class="header2"><a href="">Home</a></div>
                 <div class="header2"><a href="">About</a></div>
@@ -6,3 +19,7 @@
                 <div class="header2"><a href="">Docs</a></div>
             </div>
         </header>
+
+</body>
+</html>
+        
