--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1>Привет</h1>
-<button>JJJJ</button>
+<!DOCTYPE html>
+<html>
+<head>
+	 <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>KRKRK</title>
+</head>
+
+<body>
+	<footer>
+    <div>gleb009</div>
+    </footer>
+
+</body>
+</html>
+        
