--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Привет</h1>
-<button>JJJJ</button>
+<!DOCTYPE html>
+<html>
+<head>
+	
+	<title></title>
+</head>
+<body>
+<div class="main"></div>
+</body>
+</html>
